# demo-claude-code

./: ARCHITECTURE_REVIEW.md  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
app/api/: endpoints.py
app/core/: config.py  error.py  error_codes.py  middleware.py
app/domain/: entities.py  services.py
app/infra/: user_repository_impl.py
app/ports/: user_repository.py
app/usecase/command/: create_user.py  delete_user.py  update_user.py
app/usecase/query/: get_user.py  get_users.py
docs/: prompt-day1.md  slides.md
schemas/: common.py
schemas/requests/: __init__.py  user.py
schemas/responses/: __init__.py  error.py  user.py
tests/: conftest.py
tests/api/: test_endpoints.py
tests/domain/: test_db.py  test_error.py  test_user_repository.py
tests/usecase/: test_create_user.py  test_get_user.py
